revision 51 - 20100801                                      |
libspeedtest:                                               |
  * Fixed bug (finally!) causing failed hostlist updates    |
QSpeedTest:                                                 |
  * Entering a new hostlist URL in Preferences and clicking |
    the OK button will, if warranted, trigger an immediate  |
    update of the hostlist                                  |

revision 50 - 20100726                                      |
libspeedtest:                                               |
  * Fixes in PingHost class code for IBM OS/2 portability.  |
    BBRAS detection still not implemented, though           |


revision 49 - 20100725                                      |
libspeedtest:                                               |
  * Fixed a serious bug introduced in previous commits that |
    caused segmentation fault when exiting without having   |
    first run a test                                        |


revision 48 - 20100725                                      |
libspeedtest:                                               |
  * Fixed a minor bug introduced in previous commit that    |
    caused a QProcess-related message in stderr             |


revision 47 - 20100725                                      |
libspeedtest:                                               |
  * Some fixes in HostInfo and PingHost code for IBM OS/2   |
QSpeedTest:                                                 |
  * Fixed minor bug in program update availability message  |


revision 46 - 20100725                                      |
libspeedtest:                                               |
  * Detect and print ISP network in the reports             |


revision 45 - 20100725                                      |
libspeedtest:                                               |
  * Minor changes in report layout                          |


revision 44 - 20100724                                      |